# mypackage

./: README.md  pyproject.toml
mypackage/: utils.py
mypackage/geometry/: geometry.py
tests/: test_divide.py  test_line_length.py
