[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mypackage"
version = "0.1.1"
description = "My first package"
license = {file = "LICENSE.txt"}
dependencies = [
  "bumpver==2023.1129",
  "gidgethub>4.0.0",
]
[project.optional-dependencies]
dev = [
  "pre-commit==3.5.0",
  "pytest==7.4.3",
  "pytest-cov==2.6.1",
]